--- a/index.html
+++ b/index.html
@@ -38,52 +38,52 @@
             <div class="row g-3">
                 <!--primera imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img1.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen" />
+                    <img loading="lazy" src="img/img1.jpg" class="img-fluid" alt="describe lo que se ve en la imagen" />
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--segunda imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img2.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img2.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--tercera imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img3.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img3.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--cuarta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img4.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img4.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--quinta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img5.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img5.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--sexta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img6.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img6.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--séptima imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img7.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img7.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--octava imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img8.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img8.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--novena imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img9.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img9.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--décima imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img10.jpeg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img10.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
                     <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
                 </figure>
                 <!--no hay más imágenes-->
