--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     
                     <p class="lead">Jennifer Daniel es la Gerente de Diseño del grupo de Expression Design en Google, participando en la dirección creativa de stickers, gifs, emoticonos y efectos de cámara. Antes de unirse a Google, Jennifer fue directora de arte y editora gráfica en el New York Times.</p>
                     
-                    <p>Aclamada por su forma calculada, inteligente y basada en el contenido de lidiar con la representación y la composición, su trabajo se ha distribuido ampliamente entre la población, permitiendo explicar conceptos complejos por medio de la ilustración. Su libro más reciente, "El origen de casi todo", investiga el universo a través de esquemas y gráficos, información y realidades.</p>
+                    <p>Aclamada por su forma calculada, inteligente y basada en el contenido de lidiar con la representación y la composición, su trabajo se ha distribuido ampliamente entre la población, permitiendo explicar conceptos complejos por medio de la ilustración. Sus diseños se basan en figuras y textos coloridos y analogías a objetos cotidianos. Su libro más reciente, "El origen de casi todo", investiga el universo a través de esquemas y gráficos, información y realidades.</p>
 
                 </div>
             </div>
@@ -38,53 +38,48 @@
             <div class="row g-3">
                 <!--primera imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img1.jpg" class="img-fluid" alt="describe lo que se ve en la imagen" />
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <img loading="lazy" src="img/img1.jpg" class="img-fluid" alt="Ilustración sobre el uso de las estrellas y constelaciones como guía." />
+                    <figcaption class="p-1 mb-3">Utilizando las estrellas y constelaciones.</figcaption>
                 </figure>
                 <!--segunda imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img2.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">El Big Bang.</figcaption>
                 </figure>
                 <!--tercera imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img3.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Nuestro sistema solar.</figcaption>
                 </figure>
                 <!--cuarta imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img4.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Planetas como frutas.</figcaption>
                 </figure>
                 <!--quinta imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img5.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">¿Qué más hay en el sitema solar?</figcaption>
                 </figure>
                 <!--sexta imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img6.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">La luna.</figcaption>
                 </figure>
                 <!--séptima imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img7.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">El Sol.</figcaption>
                 </figure>
                 <!--octava imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img8.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Atracción de estrellas.</figcaption>
                 </figure>
                 <!--novena imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/img9.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
-                </figure>
-                <!--décima imagen-->
-                <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img10.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+					<figcaption class="p-1 mb-3">El calendario terrestre.</figcaption>
                 </figure>
                 <!--no hay más imágenes-->
             </div>
@@ -95,7 +90,7 @@
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
                         <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                        <a href="#" class="link-light">Reemplaza esto con tu Nombre y Apellido</a>
+                        <a href="https://github.com/josefinaijb" class="link-light">Josefina Jara</a>
                         <a href="https://github.com/profesorfaco/dno075-2021/" class="link-light">Infografía Digital</a>
                         <a href="https://github.com/profesorfaco/dno075-2021/tree/main/clase-02" class="d-none d-lg-inline link-light">Lunes 23 de agosto, 2021</a>
                     </p>
