--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     
                     <p class="lead">Jennifer Daniel es la Gerente de Diseño del grupo de Expression Design en Google, participando en la dirección creativa de stickers, gifs, emoticonos y efectos de cámara. Antes de unirse a Google, Jennifer fue directora de arte y editora gráfica en el New York Times.</p>
                     
-                    <p>Aclamada por su forma calculada, inteligente y basada en el contenido de lidiar con la representación y la composición, su trabajo se ha distribuido ampliamente entre la población, permitiendo explicar conceptos complejos por medio de la ilustración. Sus diseños se basan en figuras y textos coloridos y analogías a objetos cotidianos. Su libro más reciente, "El origen de casi todo", investiga el universo a través de esquemas y gráficos, información y realidades.</p>
+                    <p>Aclamada por su forma calculada, inteligente y basada en el contenido de lidiar con la representación y la composición, su trabajo se ha distribuido ampliamente entre la población, permitiendo explicar conceptos complejos por medio de la ilustración. Sus diseños se basan en figuras y textos coloridos y analogías a objetos cotidianos. Su libro más reciente, "El origen de casi todo", investiga el universo a través de esquemas y gráficos, datos y hechos.</p>
 
                 </div>
             </div>
@@ -43,42 +43,42 @@
                 </figure>
                 <!--segunda imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img2.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img2.jpg" class="img-fluid" alt="Ilustración sobre el desarrollo del Big Bang."/>
                     <figcaption class="p-1 mb-3">El Big Bang.</figcaption>
                 </figure>
                 <!--tercera imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img3.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img3.jpg" class="img-fluid" alt="Comparación entre los tamaños de los objetos del sistema solar."/>
                     <figcaption class="p-1 mb-3">Nuestro sistema solar.</figcaption>
                 </figure>
                 <!--cuarta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img4.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img4.jpg" class="img-fluid" alt="Analogía del tamaño de planetas con el tamaño de frutas."/>
                     <figcaption class="p-1 mb-3">Planetas como frutas.</figcaption>
                 </figure>
                 <!--quinta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img5.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img5.jpg" class="img-fluid" alt="Descripción de diferentes cuerpos espaciales que pueden estrellarse contra la tierra."/>
                     <figcaption class="p-1 mb-3">¿Qué más hay en el sitema solar?</figcaption>
                 </figure>
                 <!--sexta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img6.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img6.jpg" class="img-fluid" alt="Descripción de características de la luna."/>
                     <figcaption class="p-1 mb-3">La luna.</figcaption>
                 </figure>
                 <!--séptima imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img7.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img7.jpg" class="img-fluid" alt="Descripción de características del sol."/>
                     <figcaption class="p-1 mb-3">El Sol.</figcaption>
                 </figure>
                 <!--octava imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img8.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img8.jpg" class="img-fluid" alt="Explicación de fenómenos de interacción de estrellas."/>
                     <figcaption class="p-1 mb-3">Atracción de estrellas.</figcaption>
                 </figure>
                 <!--novena imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/img9.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <img loading="lazy" src="img/img9.jpg" class="img-fluid" alt="Ilustración del ciclo anual terrestre."/>
 					<figcaption class="p-1 mb-3">El calendario terrestre.</figcaption>
                 </figure>
                 <!--no hay más imágenes-->
