--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             figure:hover img{filter: grayscale(0);}
         </style>
     </head>
+    <body style="background-color:black;text-align:center">
     <body>
 
         <header class="container">
